examples/main/default/objects/SC_PayPalInvoice__c/SC_PayPalInvoice__c.object-meta.xml
<CustomObject>
    <description>Simulates a PayPal invoice in the AI sales cycle demo. Tracks invoice status, amount, payment link, and dates. In production this would sync with the PayPal Invoicing API.</description>
    <label>PayPal Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
        <displayFormat>INV-{0000}</displayFormat>
    </nameField>
    <pluralLabel>PayPal Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>