examples/main/default/objects/SC_PayPalInvoice__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PayPalInvoices</relationshipName>
    <relationshipLabel>PayPal Invoices</relationshipLabel>
</CustomField>