examples/main/default/objects/SC_PayPalInvoice__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>PayPalInvoices</relationshipName>
    <relationshipLabel>PayPal Invoices</relationshipLabel>
</CustomField>