examples/main/default/objects/SC_PayPalInvoice__c/fields/PaidDate__c.field-meta.xml
<CustomField>
    <fullName>PaidDate__c</fullName>
    <label>Paid Date</label>
    <type>DateTime</type>
</CustomField>