examples/main/default/objects/SC_PayPalInvoice__c/fields/PayPalInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>PayPalInvoiceId__c</fullName>
    <label>PayPal Invoice ID</label>
    <type>Text</type>
    <length>100</length>
    <externalId>true</externalId>
</CustomField>