examples/main/default/objects/SC_PayPalInvoice__c/fields/SentDate__c.field-meta.xml
<CustomField>
    <fullName>SentDate__c</fullName>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>